// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: challenge-authenticator with titleKey: oie.on_prem.verify.title and titleKeyParams: ["SecureID"] 1`] = `
Object {
  "data": Object {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.on_prem.verify.title",
        },
        "type": "Title",
      },
      Object {
        "dir": "ltr",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: challenge-authenticator with titleKey: oie.on_prem.verify.title and titleKeyParams: ["oie.on_prem.authenticator.default.vendorName"] 1`] = `
Object {
  "data": Object {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.on_prem.verify.title",
        },
        "type": "Title",
      },
      Object {
        "dir": "ltr",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: enroll-authenticator with titleKey: oie.on_prem.enroll.title and titleKeyParams: ["SecureID"] 1`] = `
Object {
  "data": Object {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.on_prem.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "dir": "ltr",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "step": "enroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: enroll-authenticator with titleKey: oie.on_prem.enroll.title and titleKeyParams: ["oie.on_prem.authenticator.default.vendorName"] 1`] = `
Object {
  "data": Object {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.on_prem.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "dir": "ltr",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "step": "enroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should clear password field when change token error is present in transaction 1`] = `
Object {
  "data": Object {
    "credentials.clientData": "rsa_username",
    "credentials.passcode": "",
  },
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "content": "oie.on_prem.enroll.title",
        },
        "type": "Title",
      },
      Object {
        "dir": "ltr",
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      Object {
        "options": Object {
          "inputMeta": Object {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      Object {
        "label": "mfa.challenge.verify",
        "options": Object {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
